--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
 #canvas {
     display:block;
     width: 100vw;
-    height: auto;
+    height: 100vh;
     margin: 0px;
     padding: 0px;
-    border: 1px solid;
 }
