--- a/style.css
+++ b/style.css
@@ -4,9 +4,5 @@ body {
 }
 
 #canvas {
-    display:block;
-    width: 100vw;
-    height: 100vh;
-    margin: 0px;
-    padding: 0px;
+    border:1px solid;
 }
